--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "tr",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "debug": "^3.1.0",
+    "dotenv": "^5.0.0",
     "ioredis": "^3.2.2",
     "jsonwebtoken": "^8.1.1",
+    "nconf": "^0.10.0",
     "socket.io": "^2.0.4",
-    "socket.io-redis": "^5.2.0",
-    "winston": "^2.4.0"
+    "socket.io-redis": "^5.2.0"
   }
 }
