--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "nconf": "^0.10.0",
     "socket.io": "^2.0.4",
     "socket.io-redis": "^5.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.0",
+    "eslint-config-google": "^0.9.1"
   }
 }
