--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "start": "node -r dotenv/config src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "pretest": "eslint ."
   },
