--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ioredis": "^3.2.2",
     "jsonwebtoken": "^8.1.1",
     "nconf": "^0.10.0",
+    "pg-promise": "^7.5.4",
     "socket.io": "^2.0.4",
     "socket.io-redis": "^5.2.0"
   },
