--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "tr",
+  "name": "notifications",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node -r dotenv/config src",
+    "dev": "cross-env NODE_PATH=. DEBUG=notifications:* nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "pretest": "eslint ."
   },
-  "author": "",
+  "author": "Mikhail Faraponov",
   "license": "ISC",
   "dependencies": {
     "debug": "^3.1.0",
-    "dotenv": "^5.0.0",
     "ioredis": "^3.2.2",
     "jsonwebtoken": "^8.1.1",
+    "moment": "^2.21.0",
     "nconf": "^0.10.0",
     "pg-promise": "^7.5.4",
     "socket.io": "^2.0.4",
+    "socket.io-cookie-parser": "^1.0.0",
     "socket.io-redis": "^5.2.0"
   },
   "devDependencies": {
+    "cross-env": "^5.1.4",
     "eslint": "^4.18.0",
-    "eslint-config-google": "^0.9.1"
+    "eslint-config-google": "^0.9.1",
+    "mocha": "^5.0.5",
+    "nodemon": "^1.17.3"
   }
 }
