--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "cross-env NODE_PATH=. DEBUG=notifications:* nodemon",
     "test": "cross-env NODE_PATH=. NODE_ENV=testing nyc mocha",
-    "pretest": "eslint ."
+    "pretest": "npm run lint",
+    "lint": "eslint ."
   },
   "author": "Mikhail Faraponov",
   "license": "ISC",
